--- a/src/About.css
+++ b/src/About.css
@@ -42,7 +42,7 @@
       transform: translateY(0);
     }
   }
-  
+
 
 
 
@@ -66,4 +66,11 @@
 
 
     
+}
+
+body{
+  /* background-color: black; */
+  /* background: 'linear-gradient(135deg, #1e3c72, #C5A467)', */
+  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364)
+
 }
