--- a/src/Home.css
+++ b/src/Home.css
@@ -5,6 +5,7 @@
     justify-content: center;
     border-top: 10px;
     gap:20px;
+    
 }
 
 #img{
@@ -14,7 +15,11 @@
     /* border-top: 500px; */
 }
 body{
-    background-color: rgb(30, 30, 30);
+    /* background-color: rgb(205, 187, 187); */
+    /* background-color: rgb(30, 30, 30); */
+    /* background-color: linear-gradient(135deg, #1e3c72, #C5A467), */
+
+
 }
 span{
     color: hsl(60, 61%, 46%);
