--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -31,3 +31,32 @@
     font-size: large;
     text-align: center;
 }
+
+.Disturb{
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: "20px";
+    padding: "20px";
+    flex-direction: row;
+    background-color: "#f9f9f9";
+
+    
+}
+
+@media (max-width: 768px) {
+      
+       .Disturb{
+           flex-direction: column;
+           /* margin-left: 20px; */
+           /* width: 50%; */
+           /* padding-left: 20px; */
+           align-items: center;
+           justify-content: center;
+           width: auto;
+           gap: 8px;
+       }
+  }
+
+
